# plasma-desktop-patching

./: CMakeLists.txt
applets/margins-separator/contents/ui/: main.qml
containments/panel/contents/ui/: main.qml
desktoppackage/contents/applet/: AppletError.qml
desktoppackage/contents/configuration/: AppletConfiguration.qml  ConfigCategoryDelegate.qml  ConfigurationAppletPage.qml  ConfigurationKcmPage.qml
desktoppackage/contents/configuration/panelconfiguration/: MoreSettingsMenu.qml  ToolBar.qml
kcms/: CMakeLists.txt
kcms/keyboard/: CMakeLists.txt  kcm_keyboard.ui  kcm_keyboard_widget.cpp  keyboard_daemon.cpp  keyboard_daemon.h
kcms/keyboard/tests/: CMakeLists.txt
kcms/ksplash/: kcm.cpp  kcm.h
kcms/ksplash/package/contents/ui/: main.qml
kcms/landingpage/: CMakeLists.txt  baloosettings.kcfgc  kcm_landingpage.desktop  landingpage.cpp  landingpage.h  landingpage_kdeglobalssettings.kcfg  landingpage_kdeglobalssettings.kcfgc
kcms/landingpage/package/: metadata.desktop
kcms/landingpage/package/contents/ui/: MostUsedIcon.qml  Thumbnail.qml  main.qml
kcms/touchpad/: CMakeLists.txt
kcms/touchpad/applet/qml/: metadata.desktop
kcms/touchpad/kcm/: kcm_touchpad.desktop
kcms/touchpad/kcm/xlib/: touchpadconfigxlib.cpp
kcms/users/package/contents/ui/: FingerprintDialog.qml  UserDetailsPage.qml
kcms/users/src/: CMakeLists.txt  fingerprintmodel.cpp  fingerprintmodel.h  fprintdevice.cpp  fprintdevice.h  fprinthelper.cpp  fprinthelper.h  kcm.cpp  kcm.h  kcmusers_actions.actions  net.reactivated.Fprint.Device.xml  net.reactivated.Fprint.Manager.xml
